# langchain-energy-middleware

./: .gitignore  LICENSE  README.md  README.rst  agents.py  app.py  main.py  middleware.py  pyproject.toml  reporting.py  requirements.txt
docs/source/: basics.rst  conf.py  index.rst
docs/source/documentation/: energy_estimation_model.rst  energy_middleware.rst  models.rst  reporting.rst
docs/source/tutorials/: multi_agent_tutorial.rst  visualisation_tutorial.rst
src/energy_middleware/: __init__.py  energy_estimation_model.py  middleware.py  reporting.py
src/jamanota/: models.py
tutorials/: requirements.txt  sample_agents.py  sample_queries.py  sample_reporting.py  streamlit_visualisation.py
